tests/semantic/invalid/unknown_model_infer.short
tensor image float "1,3,224,224";
infer classifier(image) -> result;
